setup survey service, landing survey list

--- a/src/app/landing/landing-survey-list/landing-survey-list.component.html
+++ b/src/app/landing/landing-survey-list/landing-survey-list.component.html
@@ -1,1 +1,10 @@
-<p>landing-survey-list works!</p>
+<div class="survey-list">
+    <div *ngFor="let survey of surveys$ | async">
+        <div class="survey">
+            <h3 class="survey-title">
+                {{survey.title}}
+            </h3>
+            <hr>
+        </div>
+    </div>
+</div>
