--- a/src/app/landing/landing-survey-list/landing-survey-list.component.html
+++ b/src/app/landing/landing-survey-list/landing-survey-list.component.html
@@ -1,7 +1,7 @@
 <div class="survey-list">
     <div *ngFor="let survey of surveys$ | async">
         <div class="survey">
-            <h3 class="survey-title" (click)="goToSurvey(survey.id)">
+            <h3 class="survey-title" (click)="goToSurvey(survey.id + '')">
                 {{survey.title}}
             </h3>
             <hr>
