Add some facelift

--- a/src/app/landing/landing/landing.component.html
+++ b/src/app/landing/landing/landing.component.html
@@ -1,4 +1,7 @@
-<p>landing works!</p>
+
 
 <app-landing-user-details></app-landing-user-details>
+
+<button mat-flat-button color="primary" (click)="goToSurvey()">Add new Survey</button>
+
 <app-landing-survey-list></app-landing-survey-list>
