--- a/src/app/landing/landing-survey-list/landing-survey-list.component.html
+++ b/src/app/landing/landing-survey-list/landing-survey-list.component.html
@@ -1,10 +1,9 @@
 <div class="survey-list">
-    <div *ngFor="let survey of surveys$ | async">
-        <div class="survey">
-            <h3 class="survey-title" (click)="goToSurvey(survey.id + '')">
-                {{survey.title}}
-            </h3>
-            <hr>
-        </div>
-    </div>
+    <mat-selection-list #survey [multiple]="false">
+        <mat-list-option  *ngFor="let survey of surveys$ | async"
+            (click)="goToSurvey(survey.id + '')"
+        >
+            {{survey.title}}
+        </mat-list-option>
+    </mat-selection-list>
 </div>
