--- a/src/app/landing/landing-user-details/landing-user-details.component.html
+++ b/src/app/landing/landing-user-details/landing-user-details.component.html
@@ -1,16 +1,17 @@
+<mat-grid-list cols="1" rowHeight="10rem">
+    <mat-grid-tile>
+        <h2>
+            Diligent HW
+        </h2>
+    </mat-grid-tile>
+</mat-grid-list>
+
 <div class="user-details">
     <div *ngIf="userDetails$ | async as user">
-        <div>
-            <div>Name</div>
-            <div>{{user.name}}</div>
-        </div>
-        <div>
-            <div>Role</div>
-            <div>{{user.role}}</div>
-        </div>
-        <div>
-            <div>ID</div>
-            <div>{{user.id}}</div>
-        </div>
+        <mat-grid-list cols="2" rowHeight="1rem">
+            <mat-grid-tile>Name:</mat-grid-tile><mat-grid-tile>{{user.name}}</mat-grid-tile>
+            <mat-grid-tile>Role:</mat-grid-tile><mat-grid-tile>{{user.role}}</mat-grid-tile>
+            <mat-grid-tile>ID:</mat-grid-tile><mat-grid-tile>{{user.id}}</mat-grid-tile>
+        </mat-grid-list>
     </div>
 </div>
